# sfml-opengl

./: CMakeLists.txt  LICENSE  README.md  build.bat  build_and_run.bat
include/: EBO.h  Shader.h  VAO.h  VBO.h
shaders/: fragment_shader.frag  vertex_shader.vert
src/: EBO.cpp  Shader.cpp  VAO.cpp  VBO.cpp  main.cpp
